[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Title Screen/TechnoBG4.png" type="Texture" id=1]
[ext_resource path="res://src/EXTRA/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Title Screen/TitleFont.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Azzy/AzzyTail.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/Azzy/AzzySheet.png" type="Texture" id=5]
[ext_resource path="res://assets/Font/avrf38pt.fnt" type="BitmapFont" id=6]
[ext_resource path="res://src/MapObjects/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Title Screen/OptionsBG.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/PauseMenuSelect.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/PauseMenuControlSelect.png" type="Texture" id=10]
[ext_resource path="res://assets/HUD/PauseMenuTextLevelControls.png" type="Texture" id=11]
[ext_resource path="res://assets/Title Screen/ControlsBG.png" type="Texture" id=12]
[ext_resource path="res://assets/Font/AzureVR.ttf" type="DynamicFontData" id=13]

[sub_resource type="Animation" id=1]
resource_name = "IdleBlink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "TailWag"
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleBlink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TailWag"
loop = true
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 13 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
margin_right = 840.0
margin_bottom = 600.0
color = Color( 0.145098, 0.133333, 0.207843, 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 864, 624 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 420, 300 )
current = true
smoothing_enabled = true

[node name="TitleObject" type="Node2D" parent="."]

[node name="TitleVisibility" type="TextureRect" parent="TitleObject"]
margin_right = 840.0
margin_bottom = 600.0
rect_clip_content = true

[node name="Title" type="TextureRect" parent="TitleObject/TitleVisibility"]
margin_right = 840.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true

[node name="Azzy" type="Sprite" parent="TitleObject/TitleVisibility/Title"]
position = Vector2( 725, 172 )
texture = ExtResource( 5 )
hframes = 5
vframes = 10

[node name="AzzyTail" type="Sprite" parent="TitleObject/TitleVisibility/Title/Azzy"]
position = Vector2( 40, 12 )
z_index = -1
texture = ExtResource( 4 )
hframes = 3
vframes = 2

[node name="TailAnimation" type="AnimationPlayer" parent="TitleObject/TitleVisibility/Title/Azzy"]
root_node = NodePath("../AzzyTail")
anims/IdleBlink = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/TailWag = SubResource( 3 )

[node name="AzzyAnimation" type="AnimationPlayer" parent="TitleObject/TitleVisibility/Title/Azzy"]
root_node = NodePath("../AzzyTail")
anims/Fall = SubResource( 7 )
anims/IdleBlink = SubResource( 4 )
anims/Jump = SubResource( 8 )
anims/RESET = SubResource( 5 )
anims/TailWag = SubResource( 6 )

[node name="PressStart" type="Label" parent="."]
margin_left = 284.0
margin_top = 452.0
margin_right = 574.0
margin_bottom = 490.0
custom_fonts/font = ExtResource( 6 )
text = "-- PRESS START --"

[node name="TilesBG" type="TextureRect" parent="."]
margin_left = 840.0
margin_right = 1680.0
margin_bottom = 600.0
texture = ExtResource( 8 )

[node name="FirstMenu" type="Node2D" parent="."]
position = Vector2( 840, 0 )

[node name="Labels" type="Label" parent="FirstMenu"]
margin_left = 336.0
margin_top = 124.0
margin_right = 504.0
margin_bottom = 490.0
custom_fonts/font = ExtResource( 6 )
text = "NEW GAME

LOAD GAME

CONTROLS

EXTRAS

QUIT"
align = 1

[node name="Cursor" type="TextureRect" parent="FirstMenu"]
margin_left = 240.0
margin_top = 108.0
margin_right = 598.0
margin_bottom = 166.0
texture = ExtResource( 9 )

[node name="ControlsMenu" type="Node2D" parent="."]
position = Vector2( 840, 0 )

[node name="ControlsBG" type="TextureRect" parent="ControlsMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 812.0
margin_bottom = 576.0
texture = ExtResource( 12 )

[node name="PauseText2" type="TextureRect" parent="ControlsMenu"]
margin_left = 36.0
margin_top = 4.0
margin_right = 808.0
margin_bottom = 540.0
texture = ExtResource( 11 )

[node name="UpButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 145.0
margin_top = 233.0
margin_right = 301.0
margin_bottom = 252.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "AZURE azure :3"
clip_text = true

[node name="DownButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 145.0
margin_top = 275.0
margin_right = 301.0
margin_bottom = 294.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "Easter egg lol"
clip_text = true

[node name="LeftButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 145.0
margin_top = 317.0
margin_right = 301.0
margin_bottom = 336.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "Valerie is very sexy"
clip_text = true

[node name="RightButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 145.0
margin_top = 359.0
margin_right = 301.0
margin_bottom = 378.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "and pretty hehe~"
clip_text = true

[node name="JumpButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 526.0
margin_top = 233.0
margin_right = 682.0
margin_bottom = 252.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "But seriously...thank"
clip_text = true

[node name="AttackButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 526.0
margin_top = 275.0
margin_right = 682.0
margin_bottom = 294.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "you so much for"
clip_text = true

[node name="DashButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 526.0
margin_top = 317.0
margin_right = 682.0
margin_bottom = 336.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "playing my game. It"
clip_text = true

[node name="PauseButtonLabel" type="Label" parent="ControlsMenu/PauseText2"]
margin_left = 526.0
margin_top = 359.0
margin_right = 682.0
margin_bottom = 378.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "means so much to me"
clip_text = true

[node name="Cursor" type="TextureRect" parent="ControlsMenu"]
margin_left = 232.0
margin_top = 436.0
margin_right = 604.0
margin_bottom = 478.0
texture = ExtResource( 10 )

[node name="Transition" parent="." instance=ExtResource( 7 )]
